--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Expense Tracker</title>
 </head>
+
 <body>
   <h1>Expense Tracker</h1>
+
+  <h3>Prepared by Shreejan Acharya (C0899380)</h3>
 
   <form action="/add-expense" method="POST">
     <label for="category">Category:</label>
@@ -26,9 +30,13 @@
 
   <h2>Expenses List</h2>
   <ul>
-    <% expenses.forEach(expense => { %>
-      <li><%= expense.category %> - $<%= expense.amount.toFixed(2) %> - <%= expense.date.toISOString().split('T')[0] %> - <%= expense.description || 'No description' %></li>
-    <% }); %>
+    <% expenses.forEach(expense=> { %>
+      <li>
+        <%= expense.category %> - $<%= expense.amount.toFixed(2) %> - <%= expense.date.toISOString().split('T')[0] %> -
+              <%= expense.description || 'No description' %>
+      </li>
+      <% }); %>
   </ul>
 </body>
+
 </html>
